--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="text-align:right; ">
 	
-<h1> چیست؟ توضیح مفاهیم همراه با مثالHTML</h1>
+<h1 style="text-align: center;"> چیست؟ توضیح مفاهیم همراه با مثالHTML</h1>
 <br>
 <br>
 <p>روزانه به سایت‌های زیادی سر می‌زنیم که هر کدام به شکلی برایمان جذاب هستند و ممکن است ما را به این فکر بیندازند که این سایت‌ها چطور ساخته شدند؟ اگر به چند سال قبل برگردیم و نگاهی به اولین سایت‌های منتشرشده در وب بیندازیم، می‌بینیم که صفحات آن‌ها تنها از چند المان ساده و ابتدایی تشکیل شده‌اند.
@@ -16,7 +16,7 @@
 <br>
 <h2> چیست؟HTML</h2>
 
-<img width="400px" src="html.jpg" alt="">
+<img width="800px" src="html.jpg" alt="">
 <br>
 <p>HTML مخفف Hyper Text Markup Language بوده و در فارسی به آن زبان نشانه‌ گذاری ابرمتن می‌گویند. دقت کنید که HTML یک زبان برنامه نویسی نیست، بلکه یک زبان نشان‌گذاری یا Markup language به حساب می‌آید. کدنویسی با HTML قدم گذاشتن در جای پای بزرگان وب و شروع ساخت سایت‌های شگفت‌انگیز است.
 
