--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa-IR">
 <head>
 	<meta charset="UTF-8">
 	<title>htmlچیست به همراه css</title>
@@ -10,32 +10,39 @@
 <h1 style="text-align: center;"> چیست؟ توضیح مفاهیم همراه با مثالHTML</h1>
 <br>
 <br>
-<p>روزانه به سایت‌های زیادی سر می‌زنیم که هر کدام به شکلی برایمان جذاب هستند و ممکن است ما را به این فکر بیندازند که این سایت‌ها چطور ساخته شدند؟ اگر به چند سال قبل برگردیم و نگاهی به اولین سایت‌های منتشرشده در وب بیندازیم، می‌بینیم که صفحات آن‌ها تنها از چند المان ساده و ابتدایی تشکیل شده‌اند.
+	<p>روزانه به سایت‌های زیادی سر می‌زنیم که هر کدام به شکلی برایمان جذاب هستند و ممکن است ما را به این فکر بیندازند که این سایت‌ها چطور ساخته شدند؟ اگر به چند سال قبل برگردیم و نگاهی به اولین سایت‌های منتشرشده در وب بیندازیم، می‌بینیم که صفحات آن‌ها تنها از چند المان ساده و ابتدایی تشکیل شده‌اند.
 
 	از قدیم تا امروز، تکنولوژی‌های مختلفی در جذاب کردن فرآیند طراحی وب تاثیرگذار بوده‌اند، اما اگر بگوییم تمام این تکنولوژی‌ها به HTML منتهی می‌شوند باور می‌کنید؟ در این مسیر همراه ما باشید تا کشف کنیم HTML چیست و چطور این همه سال در دنیای وب جایگاه خودش را حفظ کرده است؟</p>
 <br>
 <h2> چیست؟HTML</h2>
 
-<img width="800px" src="html.jpg" alt="">
+<img width="1000px" src="html.jpg" alt="">
 <br>
-<p>HTML مخفف Hyper Text Markup Language بوده و در فارسی به آن زبان نشانه‌ گذاری ابرمتن می‌گویند. دقت کنید که HTML یک زبان برنامه نویسی نیست، بلکه یک زبان نشان‌گذاری یا Markup language به حساب می‌آید. کدنویسی با HTML قدم گذاشتن در جای پای بزرگان وب و شروع ساخت سایت‌های شگفت‌انگیز است.
+	<p>HTML مخفف Hyper Text Markup Language بوده و در فارسی به آن زبان نشانه‌ گذاری ابرمتن می‌گویند. دقت کنید که HTML یک زبان برنامه نویسی نیست، بلکه یک زبان نشان‌گذاری یا Markup language به حساب می‌آید. کدنویسی با HTML قدم گذاشتن در جای پای بزرگان وب و شروع ساخت سایت‌های شگفت‌انگیز است.
 
 	...اگر عاشق طراحی سایت هستید و برای ورود به این حوزه برنامه جدی دارید، آموزش HTML اولین قدم شما در این مسیرخواهد بود. اگر می‌خواهید با مراحل شروع یادگیری طراحی سایت بیشتر آشنا شوید، مطالعه مطلب زیر را از دست ندهید.</p>
 
 <h3>زبان نشانه‌گذاری چه تفاوتی با زبان برنامه نویسی دارد؟</h3>
 <br>
-<p>زبان برنامه نویسی ابزاری قدرتمند است که به وسیله آن می‌توانیم با کامپیوترها حرف بزنیم. زبان‌های برنامه نویسی به کمک دستورالعمل‌هایی که برای کامپیوتر قابل فهم هستند با آن‌ها ارتباط برقرار کرده و به طور عمده از ساختارهای کنترلی و شرطی استفاده می‌کنند. سخت افزار برای این که درست کار کند نیاز به یک سری دستورالعمل دارد. این دستورالعمل‌ها توسط برنامه نویس و زبانی که برای کامپیوتر قابل فهم باشد، به سخت افزار داده می‌شود.
-	 انواع مختلفی از زبان نشانه گذاری وجود دارد که معروف‌ترین آن HTML است. اگر به اسم زبان نشانه گذاری دقت کنید، متوجه مفهوم آن خواهید شد. در زبان‌های نشانه گذاری خبری از ساختارهای رایج برنامه‌نویسی مثل شرط، حلقه، تکرار و غیره وجود ندارد و شما داخل متن خود از یک سری نشانه استفاده می‌کنید. در حقیقت در این زبان‌ها شما به کمک این نشانه‌ها متن را از سایر عناصر صفحه جدا می‌کنید تا به کمک آن‌ها المان‌های مختلف را داخل یک صفحه وب قرار داده و ساختار صفحه را مشخص کنید.</p>
+<br><p>زبان برنامه نویسی ابزاری قدرتمند است که به وسیله آن می‌توانیم با کامپیوترها حرف بزنیم. زبان‌های برنامه نویسی به کمک دستورالعمل‌هایی که برای کامپیوتر قابل فهم هستند با آن‌ها ارتباط برقرار کرده و به طور عمده از ساختارهای کنترلی و شرطی استفاده می‌کنند. سخت افزار برای این که درست کار کند نیاز به یک سری دستورالعمل دارد. این دستورالعمل‌ها توسط برنامه نویس و زبانی که برای کامپیوتر قابل فهم باشد، به سخت افزار داده می‌شود.
+	 انواع مختلفی از زبان نشانه گذاری وجود دارد که معروف‌ترین آن HTML است. اگر به اسم زبان نشانه گذاری دقت کنید، متوجه مفهوم آن خواهید شد. در زبان‌های نشانه گذاری خبری از ساختارهای رایج برنامه‌نویسی مثل شرط، حلقه، تکرار و غیره وجود ندارد و شما داخل متن خود از یک سری نشانه استفاده می‌کنید. در حقیقت در این زبان‌ها شما به کمک این نشانه‌ها متن را از سایر عناصر صفحه جدا می‌کنید تا به کمک آن‌ها المان‌های مختلف را داخل یک صفحه وب قرار داده و ساختار صفحه را مشخص کنید.</p><br>
 <br>
 <br>
-<h2>برای دیدن مطالب بیشتر به سایت زیر مراجعه کنید</h2>
+<h4>:توضیحات خیلی مختصر و مفید</h4>
 <br>
-<a href="https://7learn.com/blog/what-is-html">مطالب بیشتر</a>
+	<img src="escelet.jpg" alt="">
+<br>
+	<p>اگر به اسکلت بندی یک ساختمان دقت کنیم اچ تی ام ال حکم اسکلت بندی سایت رو داره اگر به داخل برنامه های مختلف که برای کد نویسی سایت هست دقت کنیم کدهایی که به سایت میدیم حکم سیمان اهن و میلگرد رو برای سایت داره .اگر یه تگ بزنیم  یا (!)به این صورت برامون برامون زیر شاخه هاشو یا 10 الی 15 خط کد مینویسه مثل تصویر زیر.</p>
+<img src="Screenshot 2023-01-02 024830.jpg" alt="">
+<br>
+<h4>:(<i>css</i>)خب میریم سراغ زبان</h4>
+<br>
+	<img width="900px" src="5579_100.jpg" alt="">
+<br>
+		<p>حکم در و پنجره و رنگ و لعاب رو به سایت میده  css همینطوری که از تصویر بالا تماشا میکنید
 
 
 
-
-
-
+	</p>
 </body>
 </html>
